added operations and new files

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,9 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="client.js" charset="utf-8"></script>
+    <script src="jquery.js" charset="utf-8"></script>
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
+
     <title>Calculator</title>
   </head>
   <body>
 
+    <form>
+    </form>
+
+    <div id="numberContainer">
+
+      <div id="addition"></div>
+      <div id="subtraction"></div>
+      <div id="multiplication"></div>
+      <div id="division"></div>
+      
+    </div>
+
+
+
+
+
   </body>
 </html>
+
+
+<!-- do I need to add app.js in the head? check lecture notes -->
