buttons working, addition only function logging

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,10 +15,10 @@
   <h1>mi calculadora en el servidor!</h1>
 
   <form id="numberInput"></form>
-  <span>primer valor: </span><input type="number" name="firstNumber">
-  <span>segundo valor: </span><input type="number" name="secondNumber">
+  <span>primer valor: </span><input type="number" id="firstNumber">
+  <span>segundo valor: </span><input type="number" id="secondNumber">
   <!-- <form id="secondNumberInput"></form> -->
-  <div id="operations"></div>
+  <div id="operation"></div>
   <button class="operation" data-operation="addition">adición!</button>
   <button class="operation" data-operation="subtraction">sustracción!</button>
   <button class="operation" data-operation="multiplication">multiplicación!</button>
