buttons and operations working, nothing on DOM anymore

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <script src="/vendors/jquery.js" charset="utf-8"></script>
   <script src="/scripts/client.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
 
   <title>Calculator</title>
@@ -27,7 +28,7 @@
 </div>
 
 
-<div id="answer">tu respuesta es: <span></span></div>
+<h2 id="answer">tu respuesta es: <span id='clearAnswer'></span></h2>
 
 <button id="clear">borrar números</button>
 
