fixed res.send issue with multiply button

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -32,7 +32,7 @@
 </div>
 
 
-<h2 class="col-md-9">&Phi; tu respuesta es &Phi;<span id='showAnswer' class="col-md-3"></span></h2>
+<h2 class="col-md-9">tu respuesta es: <span id='showAnswer' class="col-md-3"></span></h2>
 
 <button id="clear"> &#x267B; borrar números &#x267B; </button>
 
