final styling and cleaning up of code

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -32,7 +32,9 @@
 </div>
 
 
-<h2 class="col-md-9">tu respuesta es: <span id='showAnswer' class="col-md-3"></span></h2>
+<h2 class="col-md-12">tu respuesta es: <span id='showAnswer'></span></h2>
+
+<div id="betweenAnswerAndButton"></div>
 
 <button id="clear"> &#x267B; borrar números &#x267B; </button>
 
