clear button empties answer too

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,7 +18,7 @@
   <h1 class="col-md-12">&Phi; mi calculadora en el servidor! &Phi;</h1>
 
   <div class="input col-md-12">
-    <form id="numberInput" class="col-sm-12"></form>
+    <form id="numberInput" class="col-md-12"></form>
     <span class="firstNumberInput col-sm-12">&Phi; primer valor &Phi;</span><input class="col-sm-12" type="number" id="firstNumber"><br>
     <span class="secondNumberInput col-sm-12">&Phi; segundo valor &Phi;</span><input class="col-sm-12" type="number" id="secondNumber">
   </div>
@@ -30,7 +30,6 @@
   <button class="operation col-md-3" id="division"> &#x2298; división! &#x2298; </button>
 
 </div>
-
 
 <h2 class="col-md-12">tu respuesta es: <span id='showAnswer'></span></h2>
 
